--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "1.8",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "firebase": "^9.6.1",
     "firebase-admin": "^11.8.0",
     "framer-motion": "^10.12.12",
     "next": "12.0.7",
@@ -20,12 +21,14 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.13",
+    "@types/oauth": "^0.9.1",
     "@types/react": "^17.0.37",
     "@types/styled-components": "^5.1.18",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.2",
+    "chrome-aws-lambda": "^6.0.0",
     "eslint": "8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -38,6 +41,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "playwright-core": "1.18.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
