--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-textarea-autosize": "^8.3.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
