--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "1.8",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.4.0",
     "firebase": "^9.6.1",
     "firebase-admin": "^11.8.0",
     "framer-motion": "^6",
