--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.6.1",
     "firebase-admin": "^11.8.0",
     "framer-motion": "^6",
+    "moment": "^2.29.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
