--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "playwright-core": "1.18.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
